# litreview

./: .env.example  .gitignore  README.md  litreview.sqlite3  pyproject.toml
config/: asgi.py  settings.py  urls.py  wsgi.py
litreview/: models.py
litreview/migrations/: 0001_initial.py
litreview/pages/: views.py
litreview/reviews/: apps.py  models.py
litreview/reviews/migrations/: 0001_initial.py
litreview/templates/: base.html
litreview/templates/account/: base.html  email.html  email_confirm.html  login.html  logout.html  password_reset.html  signup.html  verification_sent.html
litreview/templates/pages/: home.html
litreview/templates/tickets/: ticket_form.html  ticket_list.html
litreview/templates/users/: user_detail.html  user_index.html
litreview/templates/users/snippets/: review_snippet.html  ticket_snippet.html
litreview/tickets/: apps.py  models.py  urls.py  views.py
litreview/tickets/migrations/: 0001_initial.py  0002_ticket_user.py
litreview/users/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
litreview/users/migrations/: 0001_initial.py  0002_userfollows.py
