[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.poetry]
name = "LITReview"
version = "0.1.0"
description = "Application web permettant à une communauté d'utilisateurs de consulter ou de solliciter une critique de livres à la demande."
authors = ["Kévin Audebrand <kevin.audebrand@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.10"
django-environ = "^0.8.1"
Pillow = "^8.4.0"
django-allauth = "^0.47.0"
crispy-bootstrap5 = "^0.6"
django-extensions = "^3.1.5"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
mypy = "^0.910"
black = {version = "^21.11b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
